added some text on index page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="index__content--mobile">
                 <h1 class="index__content--mobile-item">Hello!</h1>
-                <p class="index__content--mobile-item">My name is Stefani Durovic. I am a <span>web</span> developer from Germany.</p>
+                <p class="index__content--mobile-item">My name is Stefani Durovic. I am a web developer from Germany.</p>
                 <a class="main__a index__content--mobile-item" href="work.html">Check out my work</a>
                 <div class="profile__button index__content--mobile-item">
                     <a class="button index__content--mobile-item" href="contact.html">Contact me</a>
@@ -53,6 +53,8 @@
             </div>
         </div>
     </main>
+
+    <p class="index__content--mobile-item disclaimer">* This little vintage portfolio website is my first project from back when I entered the exciting world of web development. Enjoy it while it's here, because soon it will be replaced with a brand new React portfolio. I just have to wrap up the other projects that I'm working on first. :) </p>
 
     <footer class="page__footer">
         <p>Find me on</p>
