added a new project

--- a/work.html
+++ b/work.html
@@ -57,18 +57,18 @@
                 <a href="https://stefanidurovic.github.io/meet/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #b5838d;">
-                <h2>Recipe App</h2>
-                <img src="images/recipeApp.png" width="400" alt="Screenshot of Recipe App project">
-                <p style="height: 60px;">Vanilla JavaScript app for finding recipes by ingredients through themealdb.com API. Users can search for recipes by ingredients and get instructions for making a chosen meal, as well as a link for a video instruction.</p>
-                <a href="https://github.com/StefaniDurovic/Recipe_App" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
-                <a href="https://stefanidurovic.github.io/Recipe_App/" target="_blank" class="button index__content--mobile-item">Live demo</a>
+                <h2>Your Favorite Book App</h2>
+                <img src="images/bookApp.png" width="400" alt="Screenshot of Book App project">
+                <p style="height: 95px; padding-top: 20px;">A React app for searching books through the Open Library API. Users can search for books, read details and visit the app's about page. Built with React, React Bootstrap, React Router.</p>
+                <a href="https://github.com/StefaniDurovic/book_app" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/book_app/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #e2e299;">
-                <h2>To-do List - a jQuery App</h2>
-                <img src="images/To-do.png" width="400" alt="Screenshot of To-do List App project">
-                <p style="height: 70px;">A simple jQuery to-do-list app. Users can add, read, delete and reorder list items.</p>
-                <a href="https://github.com/StefaniDurovic/To-do-list" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
-                <a href="https://stefanidurovic.github.io/To-do-list/" target="_blank" class="button index__content--mobile-item">Live demo</a>
+                <h2>Recipe App</h2>
+                <img src="images/recipeApp.png" width="400" alt="Screenshot of Recipe App project">
+                <p style="height: 75px;">Vanilla JavaScript app for finding recipes by ingredients through themealdb.com API. Users can search for recipes by ingredients and get instructions for making a chosen meal, as well as a link for a video instruction.</p>
+                <a href="https://github.com/StefaniDurovic/Recipe_App" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/Recipe_App/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #c0da91;">
                 <h2>Angular Movie App</h2>
@@ -80,15 +80,15 @@
             <div class="grid__item" style="background-color: #8a8397;">
                 <h2>A Movie Database API</h2>
                 <img src="images/MovieAPI.png" width="400" style="margin-top: 20px;" alt="Screenshot of Movie Database API code">
-                <p style="height: 90px; margin-top: 47px;">A REST API that connects to a NoSQL database with access to information about different movies, directors, genres and users. Users are able to sign up, update personal information, and create a list of favorite movies. The project uses the MERN stack.</p>
+                <p style="height: 93px; margin-top: 47px;">A REST API that connects to a NoSQL database with access to information about different movies, directors, genres and users. Users are able to sign up, update personal information, and create a list of favorite movies. The project uses the MERN stack.</p>
                 <a href="https://github.com/StefaniDurovic/movie_api" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
             </div>
             <div class="grid__item" style="background-color: #e5989b;">
-                <h2>Pokedex - a Simple JS App</h2>
-                <img src="images/Pokedex.png" width="370" alt="Screenshot of Pokedex App project">
-                <p style="height: 95px;">This is a very simple, one-page app that allows users to get some basic info about pokemons. Users can click on pokemons from the list and see details about them.</p>
-                <a href="https://github.com/StefaniDurovic/Simple-js-app" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
-                <a href="https://stefanidurovic.github.io/Simple-js-app/" target="_blank" class="button index__content--mobile-item">Live demo</a>
+                <h2>To-do List - a jQuery App</h2>
+                <img src="images/To-do.png" width="400" alt="Screenshot of To-do List App project">
+                <p style="height: 93px;">A simple jQuery to-do-list app. Users can add, read, delete and reorder list items.</p>
+                <a href="https://github.com/StefaniDurovic/To-do-list" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/To-do-list/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #6d6875;">
                 <h2>Hello World - a React Native Chat App</h2>
