added a new project to portfolio

--- a/work.html
+++ b/work.html
@@ -64,11 +64,11 @@
                 <a href="https://stefanidurovic.github.io/book_app/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #e2e299;">
-                <h2>Recipe App</h2>
-                <img src="images/recipeApp.png" width="400" alt="Screenshot of Recipe App project">
-                <p style="height: 75px;">Vanilla JavaScript app for finding recipes by ingredients through themealdb.com API. Users can search for recipes by ingredients and get instructions for making a chosen meal, as well as a link for a video instruction.</p>
-                <a href="https://github.com/StefaniDurovic/Recipe_App" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
-                <a href="https://stefanidurovic.github.io/Recipe_App/" target="_blank" class="button index__content--mobile-item">Live demo</a>
+                <h2>Pixagram</h2>
+                <img src="images/Pixagram.png" width="400" alt="Screenshot of Pixagram project">
+                <p style="height: 75px;">A React and Google Firebase app for uploading and browsing photos. Users can log in, upload images, browse other users' images, see a page of their own pictures, see their profile details and search for pictures by name.</p>
+                <a href="https://github.com/StefaniDurovic/pics_app" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/pics_app/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #c0da91;">
                 <h2>Angular Movie App</h2>
@@ -82,6 +82,13 @@
                 <img src="images/MovieAPI.png" width="400" style="margin-top: 20px;" alt="Screenshot of Movie Database API code">
                 <p style="height: 93px; margin-top: 47px;">A REST API that connects to a NoSQL database with access to information about different movies, directors, genres and users. Users are able to sign up, update personal information, and create a list of favorite movies. The project uses the MERN stack.</p>
                 <a href="https://github.com/StefaniDurovic/movie_api" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+            </div>
+            <div class="grid__item" style="background-color: #e5989b;">
+                <h2>Recipe App</h2>
+                <img src="images/recipeApp.png" width="400" alt="Screenshot of Recipe App project">
+                <p style="height: 80px;">Vanilla JavaScript app for finding recipes by ingredients through themealdb.com API. Users can search for recipes by ingredients and get instructions for making a chosen meal, as well as a link for a video instruction.</p>
+                <a href="https://github.com/StefaniDurovic/Recipe_App" target="_blank" class="button index__content--mobile-item">See project on GitHub</a>
+                <a href="https://stefanidurovic.github.io/Recipe_App/" target="_blank" class="button index__content--mobile-item">Live demo</a>
             </div>
             <div class="grid__item" style="background-color: #e5989b;">
                 <h2>To-do List - a jQuery App</h2>
